perf : Improving mapping performance